fix: Add focus visible css for dismiss btn

--- a/special-pages/pages/new-tab/app/remote-messaging-framework/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/RemoteMessagingFramework.module.css
@@ -177,6 +177,10 @@
         user-select: none;
     }
 
+    /* &:focus-visible {
+        opacity: 1;
+    } */
+
     @media screen and (prefers-color-scheme: dark) {
         color: var(--color-white-at-60);
     }
